crates/solidity-v2/testing/snapshots/cst_output/generated/from_v1/SourceUnit/HexNumberExpression/hex_trailing_ident_start/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected Identifier. One of Ampersand, AmpersandAmpersand, AmpersandEqual, Asterisk, AsteriskAsterisk, AsteriskEqual, BangEqual, Bar, BarBar, BarEqual, Caret, CaretEqual, CloseParen, Comma, Equal, EqualEqual, GreaterThan, GreaterThanEqual, GreaterThanGreaterThan, GreaterThanGreaterThanEqual, GreaterThanGreaterThanGreaterThan, GreaterThanGreaterThanGreaterThanEqual, LessThan, LessThanEqual, LessThanLessThan, LessThanLessThanEqual, Minus, MinusEqual, MinusMinus, OpenBrace, OpenBracket, OpenParen, Percent, PercentEqual, Period, Plus, PlusEqual, PlusPlus, QuestionMark, Slash, SlashEqual was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/generated/from_v1/SourceUnit/HexNumberExpression/hex_trailing_ident_start/input.sol:6:13]
   │
 6 │         (0x1$);
   │             ┬  
   │             ╰── Error occurred here.
───╯
